--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
-  "dependencies": {
-    "dotenv": "^16.4.7",
-    "ejs": "^3.1.10",
-    "express": "^4.21.2",
-    "express-validator": "^7.2.1",
-    "pg": "^8.13.3"
-  }
+    "dependencies": {
+        "dotenv": "^16.4.7",
+        "ejs": "^3.1.10",
+        "express": "^4.21.2",
+        "express-validator": "^7.2.1",
+        "method-override": "^3.0.0",
+        "pg": "^8.13.3"
+    },
+    "scripts": {
+        "start": "node db/populatedb.js && node app.js",
+        "watch": "node db/populatedb.js && node --watch app.js"
+    }
 }
